--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-pybit
+ccxt
+pandas
+numpy
+ta
+python-telegram-bot
 requests
-python-telegram-bot==13.15
+beautifulsoup4
 imapclient
 pyzmail36
-beautifulsoup4
-urllib3==1.26.15
-six==1.16.0
