--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-ccxt
-pandas
-numpy
-ta
-python-telegram-bot
-requests
-beautifulsoup4
-imapclient
-pyzmail36
+ccxt==4.3.59
+pandas==2.2.2
+numpy==1.26.4
+ta==0.11.0
+python-telegram-bot==20.6
+requests==2.32.3
+beautifulsoup4==4.12.3
+imapclient==3.0.1
+pyzmail36==1.0.4
+python-dotenv==1.0.1
+
